<resources>
    <string name="app_name">Moodion</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="chosen_image">Chosen Image</string>
    <string name="submit">Submit</string>
    <string name="results">Results</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="strongest_emotion">Strongest Emotion</string>

    <string name="emotion_result">%s%%</string>
    <string name="error_emotion">Problem getting errors</string>
    <string name="no_playlist">No playlist</string>
    <string name="error">Error</string>
    <string name="no_tracks">0 Tracks</string>
</resources>
