<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.kevindevelops.moodion.MainActivity">

    <FrameLayout
        android:id="@+id/fl_name_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:padding="48dp"
            android:text="@string/app_name"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="44sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_choose_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:padding="4dp"
            android:text="@string/choose_from_gallery"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:layout_marginTop="32dp"/>

        <Button
            android:id="@+id/button_take_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:padding="4dp"
            android:text="@string/take_photo"
            android:textColor="@android:color/primary_text_dark_nodisable" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:padding="4dp"
            android:text="@string/submit"
            android:textColor="@android:color/primary_text_dark_nodisable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/chosen_image" />

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>
